--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,7 +13,7 @@
           .ng-hide { display: none!important; }
       </style>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.png"> 
+    <link rel="shortcut icon" href="images/favicon.png">test 
       <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
       <!-- build:css styles/lib.css-->
       <!-- bower:css-->
